# cs61c

./: README.md  flake.nix
labs/lab01/: eccentric.c  gdb.txt  ll_cycle.c
labs/lab02/: bit_ops.c  lfsr.c  lfsr.h  vector.c  vector.h
labs/lab03/: cc_test.s  ex1.s  ex2.s  factorial.s  list_map.s
labs/lab04/: discrete_fn.s  megalistmanips.s
labs/lab05/: ex1.circ  ex2.circ  ex3.circ  ex4.circ  ex5.circ
labs/lab06/: ex1.circ
projects/proj1/: gameoflife.c  imageloader.c  imageloader.h  steganography.c  testInputs.tar.lz
projects/proj1-rs/: Cargo.toml
projects/proj1-rs/convert/: Cargo.toml
projects/proj1-rs/convert/src/: game.rs  lib.rs
projects/proj1-rs/game_of_life/: Cargo.toml
projects/proj1-rs/game_of_life/src/: game.rs  image.rs  lib.rs  steganography.rs
projects/proj1-rs/game_of_life/tests/: ppm.rs  testInputs  testOutputs
projects/proj1/testOutputs/: .gitignore  GliderGuns.tar.lz
projects/proj2/src/: abs.s  argmax.s  classify.s  dot.s  matmul.s  read_matrix.s  relu.s  write_matrix.s
projects/proj2/unittests/: unittests.py
