[package]
name = "convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.24.8", default-features = false, features = [
  "gif",
  "pnm",
  "png",
] }
png = "0.17.13"
game_of_life = { path = "../game_of_life" }
